--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fast-glob": "^3.3.2",
     "sass": "^1.70.0",
-    "vue": "^3.3.11"
+    "sass-loader": "^14.0.0",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5",
+    "vue-tippy": "^6.4.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@vitejs/plugin-vue": "^4.5.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.8.25"
   }
 }
