--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "types": ["@types/node"],
+    "types": ["@types/node", "vite-plugin-svg-icons/client"],
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
